2002-10-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* macro_std.C (tick): More debug information.

2002-10-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log.C: Include tmpstream.h in order to get ostream.

2002-10-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* assertion.h: Don't use __FUNCTION__ on any Borland version.

	* Merged SHA changes.

2002-10-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.38 released.

2002-09-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* vegetation_crops.C (DM_by_name): Support crop name "all".
	* condition_crop.C (ConditionCropSyntax): Document it.

2002-08-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* om.C (turnover): Make it more robust by leaving 1 [ug/l].

	* action_repeat.C (ActionRepeatSyntax): Fix gramtical error.

	* organic_matter.C (clayom): Removed const for BCC5.0.

2002-08-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.37 released.

	* aom.C, column_std.C, om.C, om.h, smb.C, smb.h: More clayom
	modifications. 
	
2002-08-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* clayom_biomod.C: New model.
	* Makefile (MODELS): Add it.

2002-08-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* clayom_old.C: New model.
	* Makefile (MODELS): Add it.
	* clayom.C, clayom.h: New component.
	* Makefile (COMPONENTS): Add it.
	* organic_matter.C, organic_matter.h: Use it.

2002-08-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.36 released.

2002-07-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (add_derived): Better error message.

	* lib/log.dai ("DOM-N", "DOM-C"): New log models.

2002-07-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* am.C (AM_Syntax): Handle single OM pool.

2002-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (standard_conversions): Added "MJ/d/m^2".
	(standard_conversions): Added "m/s".

	* Version 2.35 released.

2002-07-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* canopy_std.C (cut): Take WStem parameter.
	* crop_std.C (harvest): Update caller.
