@@ -1,3 +1,7 @@
+2002-10-15  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* macro_std.C (tick): Fix check.
+
 2002-10-14  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* macro_std.C (tick): More debug information.
